pasted paragraphs and trying to fix spacing

--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,13 @@ p {
 }
 .type-image {
     width: 400px;
+    height: 400px;
     border-style:solid;
     border-width: 2px;
 
 }
 .typography_item {
+    border: 1px solid green;
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
